--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,6 @@
-body {
-  background-color: gray;
-}
+
+@import "reset.css";
+@import "fonts.css";
+@import "layout.css";
+@import "adaptive.css";
+@import "animation.css";
