--- a/cssall/mainpage.css
+++ b/cssall/mainpage.css
@@ -4,6 +4,15 @@
   padding: 1rem 2rem;
 }
 
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: flex-end;
+  gap: 3.75rem;
+}
+
 .nav-list a {
   color: white;
   opacity: 70%;
