--- a/cssall/mainpage.css
+++ b/cssall/mainpage.css
@@ -4,6 +4,16 @@
   padding: 1rem 2rem;
 }
 
+.nav-wrapper a {
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  text-decoration: none;
+  &:visited {
+    color: white;
+  }
+}
+
 .nav-list {
   list-style: none;
   margin: 0;
