--- a/cssall/mainpage.css
+++ b/cssall/mainpage.css
@@ -1,27 +1,44 @@
-.nav-wrapper {
-  position: static;
-  background-color: #4444e3;
-  padding: 1rem 2rem;
+li {
+  list-style: none;
+  align-items: flex-end;
+  gap: 3.75rem;
 }
 
-.nav-list a {
+a {
   color: white;
   opacity: 70%;
   text-decoration: none;
   font-family: "Inter", sans-serif;
   font-weight: 400;
-  padding: 0.5rem 3.75rem;
 }
 
-.nav-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+a:hover {
+  color: white;
+}
+
+header {
+  position: relative;
+  padding: 0.2rem;
+}
+
+.navbar {
+  width: 100%;
+  height: 60px;
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   align-items: flex-end;
-  gap: 3.75rem;
+  justify-content: space-between;
+  background-color: #4444e3;
+  padding: 1rem 2rem;
 }
 
-.nav-list a:hover {
-  color: white;
+.navbar .logoonwrapper {
+  height: 40px;
+  width: auto;
+}
+
+.navbar .nav-list {
+  display: flex;
+  gap: 3.75rem;
 }
