--- a/cssall/mainpage.css
+++ b/cssall/mainpage.css
@@ -1,10 +1,10 @@
-li {
+.nav-list .li {
   list-style: none;
   align-items: flex-end;
   gap: 3.75rem;
 }
 
-a {
+.nav-list .a {
   color: white;
   opacity: 70%;
   text-decoration: none;
