--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -11,3 +11,34 @@ body {
   opacity: 70%;
   text-decoration: none;
 }
+
+.nav-wrapper {
+  display: flex;
+  position: absolute;
+  z-index: 2;
+  left: 5.208vw;
+  top: 2.778vw;
+  gap: 44.722vw;
+}
+
+.logo {
+}
+
+.pagenames {
+  padding-top: 0.069vw;
+  display: flex;
+  gap: 3.472vw;
+}
+
+.newsname,
+.eventsname,
+.ticketsname,
+.aboutusname {
+  font-size: 1.389vw;
+  text-decoration: none;
+  color: #ffffff;
+  opacity: 70%;
+  font-family: "Inter";
+  font-weight: 400;
+  line-height: 1.736vw;
+}
