--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,11 +1,17 @@
 body {
   background-color: #f5f5f5;
 }
+* {
+  box-sizing: border-box;
+}
 
 .nav-wrapper {
   background-color: #4444e3;
+  width: 100vw;
+  height: 5.556vw;
   display: flex;
-  position: static;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -15,9 +21,8 @@ body {
 }
 
 .pagenames {
-  padding-top: 208.33vw;
   display: flex-end;
-  gap: 3.75rem;
+  gap: 4.167vw;
 }
 
 .newsname,
@@ -35,11 +40,12 @@ body {
 .newsname,
 .eventsname,
 .ticketsname,
-.aboutusname:hover {
-  font-size: 111.11vw;
+.aboutusname {
   text-decoration: none;
   color: #ffffff;
   opacity: 100%;
+  font-size: 111.11vw;
   font-family: "Inter";
   font-weight: 400;
+  line-height: normal;
 }
