--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -41,10 +41,11 @@ body {
 .eventsname,
 .ticketsname,
 .aboutusname {
-  font-size: 1.111vw;
   text-decoration: none;
+  font-size: 1.111vw;
   color: #ffffff;
   opacity: 70%;
   font-family: "Inter";
   font-weight: 400;
+  line-height: normal;
 }
