--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   background-color: #f5f5f5;
 }
 * {
@@ -21,11 +22,6 @@ body {
   height: 1.667vw;
 }
 
-.pagenames {
-  display: flex;
-  gap: 4.167vw;
-}
-
 .logo {
   width: 12.131vw;
   height: 1.6667vw;
@@ -37,13 +33,18 @@ body {
   height: 1.667vw;
 }
 
+.pagenames {
+  display: flex;
+  gap: 4.167vw;
+}
+
 .newsname,
 .eventsname,
 .ticketsname,
 .aboutusname {
   text-decoration: none;
   color: #ffffff;
-  opacity: 70%;
+  opacity: 0.7;
   font-size: 1.111vw;
   font-family: "Inter";
   font-weight: 400;
