--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -46,7 +46,7 @@ body {
   color: #ffffff;
   opacity: 0.7;
   font-size: 1.111vw;
-  font-family: "Inter";
+  font-family: "Roboto";
   font-weight: 400;
   line-height: normal;
 }
