--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/roboto_light.ttf") format("truetype");
-  font-style: light;
+  src: url("../fonts/roboto_lightt.ttf") format("truetype");
+  font-style: normal;
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/roboto_regular.ttf") format("truetype");
+  src: url("../fonts/roboto_regularr.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/roboto_medium.ttf") format("truetype");
-  font-style: medium;
+  src: url("../fonts/roboto_mediumm.ttf") format("truetype");
+  font-style: normal;
   font-weight: 500;
 }
 
@@ -29,6 +29,6 @@
 @font-face {
   font-family: "Inter";
   src: url("../fonts/inter_medium2.ttf") format("truetype");
-  font-style: medium;
+  font-style: normal;
   font-weight: 500;
 }
