--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,11 +1,11 @@
 body {
-  overflow: hidden;
   background-color: #f5f5f5;
 }
 * {
   box-sizing: border-box;
 }
 
+/* header */
 .nav-wrapper {
   background-color: #4444e3;
   width: 100vw;
@@ -101,5 +101,94 @@ body {
   font-size: 1.11vw;
   font-family: "Inter";
   font-weight: 400;
+  line-height: normal;
+}
+
+/* page aboutus */
+
+.illuminatoraboutus {
+  display: flex;
+  background-color: none;
+  width: 89.58vw;
+  height: 102.99vw;
+  margin-top: 5.21vw;
+  margin-left: 5.21vw;
+  border: 0.15vw solid #000000;
+  border-radius: 1.04vw;
+}
+
+/* page main */
+
+.firstmain {
+  display: flex;
+  flex-direction: row;
+  width: 25.97vw;
+  height: 46.32vw;
+  margin-top: 6.53vw;
+  margin-left: 5.14vw;
+  position: relative;
+}
+
+.textmain-1 {
+  width: 25.97vw;
+  height: 35.64vw;
+  margin-top: 5vw;
+}
+
+.titlemain1 {
+  color: #000000;
+  font-size: 2.78vw;
+  font-family: "Inter";
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.imagein1 {
+  display: flex;
+  position: relative;
+  bottom: 46.32vw;
+  left: 46.53vw;
+  width: 50.69vw;
+  height: 46.32vw;
+}
+
+.main1-1 {
+  position: absolute;
+  right: 2.64vw;
+  display: flex;
+  width: 45.83vw;
+  height: 44.17vw;
+}
+
+.arrow1mainleft {
+  position: absolute;
+  width: 1.18vw;
+  height: 3.54vw;
+  right: 0;
+  align-self: center;
+}
+
+.arrow1mainright {
+  position: absolute;
+  width: 1.18vw;
+  height: 3.54vw;
+  left: 0;
+  align-self: center;
+}
+
+.dscrpt1main {
+  position: absolute;
+  width: 14.72vw;
+  height: 1.25vw;
+  bottom: 0;
+  left: 17.92vw;
+}
+
+.decriptmain1-1 {
+  color: #4444e3;
+  font-size: 1.08vw;
+  font-family: "Roboto";
+  font-weight: 300;
   line-height: normal;
 }
