--- a/stylesheets/fonts.css
+++ b/stylesheets/fonts.css
@@ -1,29 +1,22 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/roboto_lightt.ttf") format("truetype");
+  src: url("../fonts/Roboto-Light.ttf") format("truetype");
   font-style: normal;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/roboto_regularr.ttf") format("truetype");
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/roboto_mediumm.ttf") format("truetype");
+  src: url("../fonts/Roboto-Medium.ttf") format("truetype");
   font-style: normal;
   font-weight: 500;
-}
-
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter_regular2.ttf") format("truetype");
-  font-style: normal;
-  font-weight: 100;
 }
 
 @font-face {
@@ -43,6 +36,13 @@
 @font-face {
   font-family: "Inter";
   src: url("../fonts/inter_medium2.ttf") format("truetype");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Ysabeau";
+  src: url("../fonts/YsabeauOffice-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 300;
 }
